# PalmBee

./: README.md
PalmBee/pb_control/: CMakeLists.txt  package.xml
PalmBee/pb_control/launch/: cm_setpoin.launch.py  control_manager.launch.py
PalmBee/pb_control/scripts/: control_manager.py
PalmBee/pb_control/src/: cm_setpoint _bisa_takeoff_n_landing.cpp  cm_setpoint.cpp  cm_setpoint19_februari.cpp  cm_setpoint_16_februari.cpp  cm_setpoint_25_februari.cpp  cm_takeoff_maju.cpp  cm_w_yolo.cpp  cm_waypoint  control_manager.cpp  control_manager_feb4.cpp  control_manager_last_copy.cpp
PalmBee/pb_perception/config/: common_stereo.yaml  relay_qos.yaml  zed2i.yaml  zed2i_custom.yaml  zed2i_custom_default.yaml  zed2i_custom_no_od.yaml
PalmBee/pb_perception/launch/: zed_camera.launch.py  zed_rgbd_slam_launch.py  zed_rgbd_slam_launch_ori.py
