<?xml version="1.0"?>
<package format="3">
  <name>pb_control</name>
  <version>0.0.0</version>
  <description>Control manager for ArduPilot using MAVROS</description>

  <maintainer email="you@example.com">palmbee</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime / Build dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
